--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -96,7 +96,7 @@ canvas {
   outline: 0px solid #000;
   cursor: pointer;
   -webkit-box-shadow: 0px 0px 5px 0px rgb(117 117 117);
-  -moz-box-shadow: 0px 0px 5px 0px rgba(117, 117, 117, 1);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(117,117,117,1);
   box-shadow: 0px 0px 4px 0px rgb(117 117 117);
 }
 
@@ -114,20 +114,6 @@ canvas {
   -webkit-box-shadow: 0px 0px 6px 0px rgb(227 227 227);
   -moz-box-shadow: 0px 0px 6px 0px rgb(227 227 227);
   box-shadow: 0px 0px 6px 0px rgb(227 227 227);
-}
-
-#models {
-  width: 68%;
-  height: 24px;
-  font-size: 16px;
-}
-
-#loading-screen {
-  display: block;
-  position: absolute;
-  z-index: 99;
-  top: calc(50% - 250px);
-  left: calc(50% - 150px);
 }
 
 #floating-title {
